Use Stream.toList() instead of Collectors.toList()
Stream.toList() (Java 16+) returns an immutable List, which is what
the TestEnvironment constructor wants — it only iterates the result.
Lets us drop the Collectors import.